# pizza-wasm

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
pkg/: README.md  package.json  pizza-optimized.wasm  pizza-snipped.wasm  pizza_wasm.d.ts  pizza_wasm.js  pizza_wasm_bg.js  pizza_wasm_bg.wasm  pizza_wasm_bg.wasm.d.ts
src/: lib.rs
web/: index.html  index.js  package-lock.json  package.json
web/assets/: index.json  recipe_names.csv
