[package]
name = "pizza-wasm"
version = "0.1.0"
authors = ["medcl <m@medcl.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
cfg-if = "1.0.0"
web-sys = {version = "0.3.69",features = ["console"]}
wee_alloc = { optional = true,version = "0.4.5" } # Example version



[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
#opt-level = "z"
opt-level = "s"
lto = true
