[package]
name = "pizza-wasm"
version = "0.1.0"
authors = ["medcl <m@medcl.net>"]
edition = "2018"
keywords = ["pizza", "wasm", "web", "search"]
categories = ["web-programming"]

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc","load_json_objects_array","stemmers","query_string"]
jieba=["dep:pizza-jieba"]
stemmers=["dep:pizza-stemmers"]
query_string=[]
query_dsl=[]
debug=[]
load_text_lines=[]
load_json_objects_array=[]

[dependencies]
pizza-common = { git = "https://github.com/infinilabs/pizza-common" }
pizza-engine = { git = "https://github.com/infinilabs/pizza.git", default-features = false, features = ["query_string_parser"] }
pizza-stemmers = { git = "https://github.com/infinilabs/pizza-stemmers", optional = true }
pizza-jieba = { git = "https://github.com/infinilabs/pizza-jieba", optional = true }

hashbrown = { version = "0.14",default-features = false, features = ["nightly","serde"]  }

wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.50"

js-sys = "0.3"
web-sys = {version = "0.3",features = ["console"]}

cfg-if = "1.0.0"
wee_alloc = { optional = true,version = "0.4.5" }

serde = { version = "1.0.197", features = ["derive"],default-features = false }
serde_json = { version = "1.0.115",default-features = false }

# We do not depend on uuid and getrandom directly, but we need to enable the corresponding 
# feature to fix the build on WASM
uuid = { version = "1.16", features = ["rng-getrandom"] }
getrandom_v03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }


[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true

[profile.release]
codegen-units = 1
#opt-level = 's'
opt-level = 'z'
strip = "symbols"
debug = false
debug-assertions = false
panic = "abort"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
